--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
- <img src="1.png" alt="kubra">
+ <img src="1.png" width="200" height="100" alt="kubra">
   
 </body>
 </html>
